@@ -210,6 +210,7 @@ Version 1.5
  - Add Everspring Outdoor Motion Detector SP816 (Nechry)
  - Add Coolcam SOS Remote Key-Fob RC01Z (Nechry)
  - Add 2GIG Technologies CT32 Thermostat (Nechry)
+ - Add KAIPULEK Celling PIR Sensor (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
